// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for Bookmark renders bookmark not selected correctly 1`] = `
<label
  className="MuiFormControlLabel-root-3"
  style={
    Object {
      "paddingLeft": 10,
    }
  }
>
  <span
    className="MuiSwitch-root-7"
  >
    <span
      className="MuiButtonBase-root-26 MuiIconButton-root-20 MuiSwitchBase-root-16 MuiSwitch-switchBase-10 MuiSwitch-colorPrimary-12 Bookmark-colorPrimary-2"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={undefined}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-25"
      >
        <span
          className="MuiSwitch-icon-8"
        />
        <input
          autoFocus={undefined}
          checked={false}
          className="MuiSwitchBase-input-19"
          disabled={false}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          readOnly={undefined}
          required={undefined}
          tabIndex={undefined}
          type="checkbox"
          value="bookmark"
        />
      </span>
      <span
        className="MuiTouchRipple-root-29"
      />
    </span>
    <span
      className="MuiSwitch-bar-15"
    />
  </span>
  <span
    className="MuiTypography-root-36 MuiTypography-body1-45 MuiFormControlLabel-label-6 Bookmark-label-1"
  >
    Bookmark
  </span>
</label>
`;

exports[`Tests for Bookmark renders bookmark selected correctly 1`] = `
<label
  className="MuiFormControlLabel-root-3"
  style={
    Object {
      "paddingLeft": 10,
    }
  }
>
  <span
    className="MuiSwitch-root-7"
  >
    <span
      className="MuiButtonBase-root-26 MuiIconButton-root-20 MuiSwitchBase-root-16 MuiSwitch-switchBase-10 MuiSwitch-colorPrimary-12 Bookmark-colorPrimary-2 MuiSwitchBase-checked-17 MuiSwitch-checked-11"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={undefined}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-25"
      >
        <span
          className="MuiSwitch-icon-8 MuiSwitch-iconChecked-9"
        />
        <input
          autoFocus={undefined}
          checked={true}
          className="MuiSwitchBase-input-19"
          disabled={false}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          readOnly={undefined}
          required={undefined}
          tabIndex={undefined}
          type="checkbox"
          value="bookmark"
        />
      </span>
      <span
        className="MuiTouchRipple-root-29"
      />
    </span>
    <span
      className="MuiSwitch-bar-15"
    />
  </span>
  <span
    className="MuiTypography-root-36 MuiTypography-body1-45 MuiFormControlLabel-label-6 Bookmark-label-1"
  >
    Bookmark
  </span>
</label>
`;
